Added Pages and links

--- a/companionapp/modehidenseek.html
+++ b/companionapp/modehidenseek.html
@@ -12,18 +12,16 @@
 
   <div class="block explore">
     <h3>Explore</h3>
-    <p>Hide'n'Seek is the classic childhood game made even better with Greg.</p>
+    <p>Play this one with friends. One friend becomes a seeker and the rest of the players hide.
+      As the seeker gets closer to the hiders, the lights on their Greg will glow brighter</p>
     <div class="button"><a type="button" onclick="alert('Zesty')">Start Playing</a></div>
   </div>
 
   <div class="block manage">
-    <label class="checkbox">Enable Beeping<input type="checkbox" id="checkbox1"><span class="checkmark"></span></label>
-    <label class="checkbox">No<input type="checkbox" name="No" value="No"><span class="checkmark"></span></label>
+    <h3>Manage</h3>
+    <label class="checkbox">Enable Beeping<input type="checkbox" id="game1checkbox1"><span class="checkmark"></span></label>
+    <label class="checkbox">Enable Lights<input type="checkbox" id="checkbox2"><span class="checkmark"></span></label>
     <div class="button"><a class="button" onclick="alert('Zesty')">Apply</a></div>
-  </div>
-
-  <div class="block visualise">
-    <p>HEY HEY YOU LOOK AT ME BEING VISUALISED</p>
   </div>
 
 </div>
