Edited companion app

--- a/companionapp/contents.html
+++ b/companionapp/contents.html
@@ -6,10 +6,10 @@
 
 <div class="main">
   <div class="block header">
+    <a class="backbutton" href="index.html"> </a>
     <h2>Explore</h2>
 
   </div>
-
 
     <a class="block blockbutton hidenseek" href="modehidenseek.html">
         <h3>Hide 'n' Seek</h3>
