--- a/companionapp/modegregsays.html
+++ b/companionapp/modegregsays.html
@@ -6,13 +6,15 @@
 
 <div class="main">
   <div class="block header">
+    <a class="backbutton" href="contents.html"> </a>
     <h2>Greg Says</h2>
 
   </div>
 
   <div class="block explore">
-    <h3>Explore</h3>
-    <p>Copy Greg</p>
+    <p> Play this one by yourself. Similar to Simon Says, Greg will produce a light sequence
+      and then it’s up to you to copy it. As you move through the game the sequence will
+      become longer and longer.</p>
     <div class="button"><a type="button" onclick="alert('Zesty')">Start Playing</a></div>
   </div>
 
