--- a/companionapp/modehidenseek.html
+++ b/companionapp/modehidenseek.html
@@ -6,12 +6,12 @@
 
 <div class="main">
   <div class="block header">
+    <a class="backbutton" href="contents.html"> </a>
     <h2>Hide'n'Seek</h2>
 
   </div>
 
   <div class="block explore">
-    <h3>Explore</h3>
     <p>Play this one with friends. One friend becomes a seeker and the rest of the players hide.
       As the seeker gets closer to the hiders, the lights on their Greg will glow brighter</p>
     <div class="button"><a type="button" onclick="alert('Zesty')">Start Playing</a></div>
