--- a/companionapp/modevisualise.html
+++ b/companionapp/modevisualise.html
@@ -6,23 +6,25 @@
 
 <div class="main">
   <div class="block header">
+    <a class="backbutton" href="contents.html"> </a>
     <h2>Visualise</h2>
   </div>
 
   <div class="block explore">
-    <h3>Look Stuff</h3>
-    <p>Stuff</p>
-    <div class="button"><a type="button" onclick="alert('Zesty')">Start Playing</a></div>
+    <p>Play this one by yourself. When this mode is selected greg acts as a recording device
+      and remembers exactly what you did while you were wearing him. After you’re finished,
+      go into the visualise space to see what he made.</p>
+    <div class="button"><a type="button" onclick="alert('Zesty')">Start Recording</a> </div>
   </div>
 
-  <div class="block manage">
-    <h3>Manage</h3>
-    <label class="checkbox">Enable Beeping<input type="checkbox" id="game1checkbox1"><span class="checkmark"></span></label>
-    <label class="checkbox">Enable Lights<input type="checkbox" id="game1checkbox2"><span class="checkmark"></span></label>
-    <div class="button"><a class="button" onclick="alert('Zesty')">Apply</a></div>
+  <div class="block visualise">
+    <h3>History</h3>
+  <div
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+      <a href="#">Link 4</a>
   </div>
-
-</div>
 
 </body>
 </html>
