added titles and ids

--- a/companionapp/modegregsays.html
+++ b/companionapp/modegregsays.html
@@ -2,6 +2,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="script" type="text/script" href="js/websocket.js">
+  <title>Grey Says</title>
 </head>
 <body>
 
@@ -16,7 +17,7 @@
     <p> Play this one by yourself. Similar to Simon Says, Greg will produce a light sequence
       and then it’s up to you to copy it. As you move through the game the sequence will
       become longer and longer.</p>
-    <div class="button"><a type="button" onclick="alert('Zesty')">Start Playing</a></div>
+    <div class="button"><a type="button" id="playgregsays">Start Playing</a></div>
   </div>
 
   <div class="block manage">
