--- a/companionapp/modevisualise.html
+++ b/companionapp/modevisualise.html
@@ -2,6 +2,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="script" type="text/script" href="js/websocket.js">
+  <title>Visualise</title>
 </head>
 <body>
 
@@ -15,7 +16,7 @@
     <p>Play this one by yourself. When this mode is selected greg acts as a recording device
       and remembers exactly what you did while you were wearing him. After you’re finished,
       go into the visualise space to see what he made.</p>
-    <div class="button"><a type="button" onclick="alert('Zesty')">Start Recording</a> </div>
+    <div class="button"><a type="button" id="playvisualise">Start Recording</a> </div>
   </div>
 
   <div class="block visualise">
