added button id

--- a/companionapp/modegregsays.html
+++ b/companionapp/modegregsays.html
@@ -17,7 +17,7 @@
     <p> Play this one by yourself. Similar to Simon Says, Greg will produce a light sequence
       and then it’s up to you to copy it. As you move through the game the sequence will
       become longer and longer.</p>
-    <div class="button"><a type="button" id="playgregsays">Start Playing</a></div>
+    <div class="button"><a class="innerButton" type="button" id="playgregsays">Start Playing</a></div>
   </div>
 
   <div class="block manage">
