--- a/companionapp/modehidenseek.html
+++ b/companionapp/modehidenseek.html
@@ -16,7 +16,7 @@
   <div class="block explore">
     <p>Play this one with friends. One friend becomes a seeker and the rest of the players hide.
       As the seeker gets closer to the hiders, the lights on their Greg will glow brighter</p>
-    <div class="button"><a type="button" id="playhidenseek">Start Playing</a></div>
+    <div class="button"><a class="innerButton" type="button" id="playhidenseek">Start Playing</a></div>
   </div>
 
   <div class="block manage">
