added title and viewport, edited js link

--- a/companionapp/index.html
+++ b/companionapp/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="css/styles.css">
-<link rel="script" type="text/script" href="js/websocket.js">
+<script src="js/websocket.js"></script>
+<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'>
 </head>
 <body>
 
