--- a/companionapp/modevisualise.html
+++ b/companionapp/modevisualise.html
@@ -1,8 +1,9 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <link rel="script" type="text/script" href="js/websocket.js">
+  <script src="js/websocket.js"></script>
   <title>Visualise</title>
+  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'>
 </head>
 <body>
 
