--- a/companionapp/modehidenseek.html
+++ b/companionapp/modehidenseek.html
@@ -2,6 +2,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <script src="js/websocket.js"></script>
+  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'>
   <title>Hide & Seek</title>
 </head>
 <body>
