added more modes

--- a/companionapp/contents.html
+++ b/companionapp/contents.html
@@ -12,15 +12,18 @@
     <h2>Explore</h2>
 
   </div>
-
+    <a class="block blockbutton idle" href="modeidle.html">
+        <h3>Idle</h3>
+    </a>
     <a class="block blockbutton hidenseek" href="modehidenseek.html">
         <h3>Hide 'n' Seek</h3>
     </a>
-
     <a class="block blockbutton says" href="modegregsays.html">
         <h3>Greg Says</h3>
     </a>
-
+    <a class="block blockbutton sing" href="modesing.html">
+        <h3>Sing</h3>
+    </a>
     <a class="block blockbutton visualise" href="modevisualise.html">
         <h3>Visualise</h3>
     </a>
