moved css and js files

--- a/companionapp/edit.html
+++ b/companionapp/edit.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>HTML Uploader</title>
-  <link rel="stylesheet" type="text/css" href="css/styles.css">    <link rel="manifest" href="/manifest.json">
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="manifest" href="/manifest.json">
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'>
 </head>
 <body>
