--- a/companionapp/modeidle.html
+++ b/companionapp/modeidle.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <script src="js/websocket.js"></script>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <script src="websocket.js"></script>
   <title>Idle</title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'>
 </head>
