--- a/companionapp/modevisualise.html
+++ b/companionapp/modevisualise.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <script src="js/websocket.js"></script>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <script src="websocket.js"></script>
   <title>Visualise</title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'>
 </head>
@@ -22,7 +22,7 @@
 
   <div class="block visualise">
     <h3>History</h3>
-  <div
+  <div>
       <a href="#">Link 1</a>
       <a href="#">Link 2</a>
       <a href="#">Link 3</a>
