--- a/companionapp/index.html
+++ b/companionapp/index.html
@@ -2,6 +2,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="styles.css">
 <script src="websocket.js"></script>
+<title>Main Menu</title>
 <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'>
 </head>
 <body>
@@ -19,9 +20,9 @@
 
   <div class="block manage">
     <h3>Manage</h3>
-    <label class="checkbox">Enable Beeping<input type="checkbox" id="game1checkbox1"><span class="checkmark"></span></label>
-    <label class="checkbox">Enable Lights<input type="checkbox" id="game1checkbox2"><span class="checkmark"></span></label>
-    <div class="button"><a class="button" onclick="alert('Zesty')">Apply</a></div>
+    <label class="checkbox">Enable Beeping<input class="config" type="checkbox" id="checkbox1"><span class="checkmark"></span></label>
+    <label class="checkbox">Enable Lights<input class="config" type="checkbox" id="checkbox2"><span class="checkmark"></span></label>
+    <div class="button"><a class="innerButton" id="applyConfig">Apply</a></div>
   </div>
 
 </div>
