--- a/companionapp/modehidenseek.html
+++ b/companionapp/modehidenseek.html
@@ -22,9 +22,9 @@
 
   <div class="block manage">
     <h3>Manage</h3>
-    <label class="checkbox">Enable Beeping<input type="checkbox" id="game1checkbox1"><span class="checkmark"></span></label>
-    <label class="checkbox">Enable Lights<input type="checkbox" id="checkbox2"><span class="checkmark"></span></label>
-    <div class="button"><a class="button" onclick="alert('Zesty')">Apply</a></div>
+    <label class="checkbox">Enable Beeping<input type="checkbox" class="config"><span class="checkmark"></span></label>
+    <label class="checkbox">Enable Lights<input type="checkbox" class="config"><span class="checkmark"></span></label>
+    <div class="button"><a class="innerButton">Apply</a></div>
   </div>
 
 </div>
