added config support

--- a/companionapp/modehidenseek.html
+++ b/companionapp/modehidenseek.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <script src="config.js"></script>
   <script src="websocket.js"></script>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'>
   <title>Hide & Seek</title>
@@ -24,7 +25,7 @@
     <h3>Manage</h3>
     <label class="checkbox">Enable Beeping<input type="checkbox" class="config"><span class="checkmark"></span></label>
     <label class="checkbox">Enable Lights<input type="checkbox" class="config"><span class="checkmark"></span></label>
-    <div class="button"><a class="innerButton">Apply</a></div>
+    <div class="button"><a class="innerButton" id="applyConfig">Apply</a></div>
   </div>
 
 </div>
