--- a/companionapp/modevisualise.html
+++ b/companionapp/modevisualise.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <script src="config.js"></script>
   <script src="websocket.js"></script>
   <title>Visualise</title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'>
