--- a/companionapp/modegregsays.html
+++ b/companionapp/modegregsays.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <script src="config.js"></script>
   <script src="websocket.js"></script>
   <title>Greg Says</title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'>
@@ -25,7 +26,7 @@
     <h3>Manage</h3>
     <label class="checkbox">Enable Beeping<input class="config" type="checkbox"><span class="checkmark"></span></label>
     <label class="checkbox">Enable Lights<input class="config" type="checkbox"><span class="checkmark"></span></label>
-    <div class="button"><a class="innerButton">Apply</a></div>
+    <div class="button"><a class="innerButton" id="applyConfig">Apply</a></div>
   </div>
 
 </div>
