--- a/companionapp/index.html
+++ b/companionapp/index.html
@@ -14,7 +14,7 @@
 
   </div>
 
-  <a class="block blockbutton hidenseek" href="contents.html">
+  <a class="block blockbutton explore" href="contents.html">
       <h3>Explore</h3>
       <p> In EXPLORE mode you can have a look at all the cool things that are available to you with your greg.</p>
   </a>
