--- a/companionapp/contents.html
+++ b/companionapp/contents.html
@@ -13,7 +13,7 @@
 
   </div>
     <a class="block blockbutton idle" href="modeidle.html">
-        <h3>Idle</h3>
+        <h3>Emo Greg (Idle)</h3>
     </a>
     <a class="block blockbutton hidenseek" href="modehidenseek.html">
         <h3>Hide 'n' Seek</h3>
@@ -22,7 +22,7 @@
         <h3>Greg Says</h3>
     </a>
     <a class="block blockbutton sing" href="modesing.html">
-        <h3>Sing</h3>
+        <h3>Greg Sings</h3>
     </a>
     <a class="block blockbutton visualise" href="modevisualise.html">
         <h3>Visualise</h3>
